Bug 402534 - DB password doesn't apply while trying to save
Summary: DB password doesn't apply while trying to save
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: database (other bugs)
Version First Reported In: 5.0.2
Platform: Neon Linux
: NOR major
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-24 16:03 UTC by Valeriy Polischuk
Modified: 2018-12-25 19:35 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Valeriy Polischuk 2018-12-24 16:03:29 UTC
SUMMARY
While trying save to DB (mysql) getting error "Failed to save your storage."

STEPS TO REPRODUCE
1. Open kmymoney
2. Enter password for DB
3. Add some entries
4. Ctrl - S ог just click on Save

OBSERVED RESULT
"Failed to save your storage."
Error in function bool MyMoneyStorageSql::writeFile() : starting commit unit
Driver = QMYSQL, Host = somehost, User = kmymoney, Database = kmymoney
Driver Error: QMYSQL: Unable to connect
Database Error No 1045: Access denied for user 'kmymoney'@'somehost' (using password: NO)
Text: Access denied for user 'kmymoney'@'somehost' (using password: NO) QMYSQL: Unable to connect
Error type 1
Executed: 
Query error No -1: Driver not loaded Driver not loaded
Error type 1 /workspace/build/kmymoney/plugins/sql/mymoneystoragesql.cpp:357

EXPECTED RESULT
Saving information to DB

SOFTWARE/OS VERSIONS 
Operating System: KDE neon 5.14
KDE Plasma Version: 5.14.4
Qt Version: 5.11.2
KDE Frameworks Version: 5.53.0
Kernel Version: 4.15.0-42-generic
OS Type: 64-bit

ADDITIONAL INFORMATION
As i see, db password doesn't apply when trying to save.
Comment 1 Thomas Baumgart 2018-12-25 19:35:38 UTC
Git commit 0b79fc5d74088029ff67f57ebe3b52fb285b1d51 by Thomas Baumgart.
Committed on 25/12/2018 at 19:34.
Pushed by tbaumgart into branch '5.0'.

Remember the full URL for saving the database

When using the 'open recent' feature on a database, the password was not
remembered and any following save operation of the data failed. This
change remembers the password for that operation.
FIXED-IN: 5.0.3

M  +7    -2    kmymoney/kmymoney.cpp
M  +6    -1    kmymoney/plugins/gnc/import/gncimporter.cpp
M  +1    -0    kmymoney/plugins/gnc/import/gncimporter.h
M  +6    -0    kmymoney/plugins/kmymoneyplugin.h
M  +16   -6    kmymoney/plugins/sql/sqlstorage.cpp
M  +6    -0    kmymoney/plugins/sql/sqlstorage.h
M  +8    -0    kmymoney/plugins/xml/xmlstorage.cpp
M  +5    -0    kmymoney/plugins/xml/xmlstorage.h

https://commits.kde.org/kmymoney/0b79fc5d74088029ff67f57ebe3b52fb285b1d51