Remember the full URL for saving the database

When using the 'open recent' feature on a database, the password was not
remembered and any following save operation of the data failed. This
change remembers the password for that operation.

BUG: 402534
FIXED-IN: 5.0.3